# oreilly-epub-downloader_master

./: README.md  pyproject.toml
src/: cli.py  client.py  cookie_auth.py  pdf_generator.py  server.py
src/static/: app.js  index.html  style.css
